# ml-pararnn

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pararnn/: __init__.py
pararnn/csrc/: fused_fwd_bwd_kernel.h  fused_gru_diag.cu  fused_lstm_cifg_diag.cu  helpers.h  nonlinearities.h  parallel_reduce.cu  parallel_reduction_bindings.cpp  parallel_reduction_kernel.h  rnn_cell_impl.h
pararnn/parallel_reduction/: parallel_reduction.py  test.py  utils.py
pararnn/rnn_cell/: __init__.py  gru_diag_mh.py  lstm_cifg_diag_mh.py  rnn_cell.py  rnn_cell_application.py  rnn_cell_impl.py  rnn_cell_utils.py  test.py
pararnn/utils/: __init__.py  init.py  misc.py  nonlinearities.py  timing.py
training/: evaluate.py  train.py
training/configs/: train.yaml
training/configs/data/: slimpajama.yaml
training/configs/model/: mamba2.yaml  paragru.yaml  paralstm.yaml  transformer.yaml
training/scripts/: build_and_train.sh  eval_all.sh  launch_all.sh  setup_env.sh  train_mamba2.sh  train_paragru.sh  train_paralstm.sh  train_transformer.sh
training/src/: data.py  lle.py  lm_eval_wrapper.py  model.py
