[build-system]
requires = ["setuptools", "torch", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "pararnn"
authors = [
    {name = "Federico Danieli", email = "f_danieli@apple.com"},
]
dynamic = ["version"]
readme = "README.md"
description = "Package to parallelize RNN applications."
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "typing-inspect"
]

[tool.setuptools]
packages = ["pararnn"]

[tool.setuptools.dynamic]
version = {attr = "pararnn.__version__"}